--- a/.github/workflows/deployment1.yml
+++ b/.github/workflows/deployment1.yml
@@ -2,7 +2,7 @@ name: deployment 1
 on: push
 jobs:
   deploy:
-    runs-on: ubunto-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Get code
         uses: actions/checkout@v4
